force-app/main/default/objects/LiveChatTranscript/fields/Security_Token__c.field-meta.xml
<CustomField>
    <fullName>Security_Token__c</fullName>
    <description>DCS-135 security token from pre chat form. It is created by signing chat visitor&apos;s email with self signed certificate.</description>
    <label>Security Token</label>
    <length>350</length>
    <type>LongTextArea</type>
</CustomField>