force-app/main/default/objects/LiveChatTranscript/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <description>DCS-135 email address of chat visitor</description>
    <label>User Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>