force-app/main/default/objects/LiveChatTranscript/fields/Visitor_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Visitor_User_Id__c</fullName>
    <description>CDCS-184 - field containing id of a user logged in on OneHub</description>
    <inlineHelpText>Id of a user accessing chat bot</inlineHelpText>
    <label>Visitor User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>