force-app/main/default/objects/LiveChatTranscript/listViews/CIBSA_GM_Client_Experience_Live_Chat_Q_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>CIBSA_GM_Client_Experience_Live_Chat_Q_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>CIBSA GM Client Experience Live Chat Q</label>
    <queue>CIBSA_GM_Client_Experience_Live_Chat_Q</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>