force-app/main/default/objects/LiveChatTranscript/listViews/CIBSA_GM_TPS_IPS_Live_Chat_Queue_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>CIBSA_GM_TPS_IPS_Live_Chat_Queue_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>CIBSA GM TPS&amp;IPS Live Chat Queue</label>
    <queue>CIBSA_GM_TPS_IPS_Live_Chat_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>