force-app/main/default/objects/LiveChatTranscript/listViews/Standard_Bank_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Standard_Bank_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Standard Bank</label>
    <queue>Standard_Bank</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>